# testdispatchuv

./: .env  .env.example  .gitignore  BD_MX-25.xlsx  Dockerfile  Dockerfile_uv_dispatch_exemple  NOTES.md  README.md  TODO.md  dalaldjam_db-20250424.sql  dalaldjam_db-20250505.sql  dalaldjam_db-20250505_AvecAlter.sql  dispatch_log.txt  fly.tom  fly.toml  fly_old_byAI.toml  hotes2024.xlsx  install_uv.sh  pyproject.toml  readme_docker.md  test_api_maps.py  test_connection.py  test_connexion_msa.py  test_db_connection.py  test_dispatch.py  test_fetchall.py  test_fetchone.py  ~$hotes2024.xlsx
.github/workflows/: ci.yml
README_REP/: readme_docker.md  readme_encodagebas64.md  readme_git.md  readme_lancer_fonction.md  readme_uv.md  updatedate.sql
app/: _main copy.ipynb  _main.ipynb  _main2.ipynb  config.py  dispatch_solver_orchestrator.py  main.py
app/README_REP/: readme_curl.md  readme_uv.md
app/REAME_REP/: readme_docker.md  readme_git.md  readme_lancer_fonction.md
app/api/: dispatch.py
app/core/: auth.py  chauffeur_processor.py  config.py  course_groupe_processor.py  course_processor copy.py  course_processor.py  dispatch.py  dispatch_solver.py  dispatch_solver_20250506.py  (+7 more)
flask_app/: dispatch.py
flask_app_old/: dispatch_app.py
test_my/: generate_courses.ipynb  generate_courses.py  script_tranfert_synchro_chauffeur.py  test_groupage_similariteRoute.py  test_moustapha.ipynb  test_syncChauffeur.py  test_syncHotes.py  test_syncHotes_obsolete.py  verification_hotes.ipynb
tests/: conftest.py  test_database_connection.py  test_supabase.py  test_upsert_item.py
(+22 files in other folders)
